# hyperplot

./: .gitignore  README.md  demo.py  pyproject.toml
hyperplot/: partitioning.py  plotting.py
tests/: test_partitioning.py
