[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]

name = "hyperplot"

version = "0.0.0"

description = "Write Beuatifully Partitioned Data for Extremely Fast Plottig"

requires-python = ">=3.9"

dependencies = [
  "tsdownsample>=0.1.1",
  "polars",
  "plotly",
]

[project.optional-dependencies]
dev = [
    "flake8>=4.0.1",
    "pep8-naming>=0.13.0",
    "flake8-docstrings>=1.6.0",
    "pytest>=7.1.2",
    "pytest-cov>=3.0.0",
    "isort>=5.10.1",
    "black>=22.8.0",
]

[tool.isort]
profile = "black"

[tool.black]
line-length = 120